2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        * editing/SelectionController.cpp:
        (WebCore::SelectionController::debugRenderer): Changed to use String instead of
        DeprecatedString.

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed and landed by Sam.

        Remove DeprecatedStringList.

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
        * editing/markup.cpp:
        * platform/DeprecatedStringList.cpp: Removed.
        * platform/DeprecatedStringList.h: Removed.
        * platform/mac/DeprecatedStringListMac.mm: Removed.

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        * css/CSSPrimitiveValueMappings.h: Add default cases to all the switch statements.
        This will ease the way some day if we decide to use an enum instead of int; otherwise
        we'll have a ton of "unhandled enum value" warnings here.

2008-02-18  Alp Toker  <alp@atoker.com>

        Build fix for GTK+ < 2.10. Fall back to simple text clipboard copy
        with older GTK+ versions for now.

        * platform/gtk/PasteboardGtk.cpp:
        (WebCore::Pasteboard::writeSelection):

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        * WebCore.base.exp: Export a couple of WebCore::String functions we plan to use
        in the future in WebKit.

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        * DerivedSources.make: Added the scripts to the ENABLE_SVG versions of the rules
        for CSSPropertyNames.h and CSSValueKeywords.h. Somehow that got left out, so the
        files would not be regenerated if the scripts were changed (but would if SVG was
        disabled).

2008-02-18  Alexey Proskuryakov  <ap@webkit.org>

        Suggested by Darin.
