@@ -2,6 +2,14 @@
 
         Reviewed by Sam.
 
+        * editing/htmlediting.cpp:
+        (WebCore::stringWithRebalancedWhitespace): Changed to use String instead of
+        DeprecatedString.
+
+2008-02-18  Darin Adler  <darin@apple.com>
+
+        Reviewed by Sam.
+
         * editing/SelectionController.cpp:
         (WebCore::SelectionController::debugRenderer): Changed to use String instead of
         DeprecatedString.
